--- a/test/EgammaWJetTest.cfg
+++ b/test/EgammaWJetTest.cfg
@@ -11,7 +11,7 @@ process EgammaSkim= {
   source = PoolSource {
       untracked vstring fileNames =
       {
-       "rfio:/castor/cern.ch/user/m/mmozer/z_ee.root"
+       "rfio:/castor/cern.ch/cms/store/RelVal/2007/8/12/RelVal-RelVal145W-E-1186929820/0002/38390E15-EF48-DC11-85FB-000423D9939C.root"
       }
       untracked uint32 debugVerbosity = 0
       untracked bool   debugFlag     = false
