--- a/test/EgammaWJetTest.cfg
+++ b/test/EgammaWJetTest.cfg
@@ -6,15 +6,22 @@
 
 process EgammaSkim= {
 
-  untracked PSet maxEvents = {untracked int32 input = 10}
+ untracked PSet options = {
+#     include "FWCore/Framework/test/cmsExceptionsFatalOption.cff"
+      untracked bool wantSummary = true
+      untracked bool makeTriggerResults = true
+  }
+
+  untracked PSet maxEvents = {untracked int32 input = -1}
 
   source = PoolSource {
       untracked vstring fileNames =
       {
-       "rfio:/castor/cern.ch/cms/store/RelVal/2007/8/12/RelVal-RelVal145W-E-1186929820/0002/38390E15-EF48-DC11-85FB-000423D9939C.root"
+       #"rfio:/castor/cern.ch/cms/store/RelVal/2007/8/12/RelVal-RelVal145W-E-1186929820/0002/38390E15-EF48-DC11-85FB-000423D9939C.root"
+       #"rfio:/castor/cern.ch/cms/store/RelVal/2007/8/12/RelVal-RelVal145Z-EE-1186929820/0002/4C727B30-E748-DC11-8126-001617C3B6FE.root"
+       "rfio:/castor/cern.ch/cms/store/RelVal/2007/8/10/RelVal-RelVal160pre9Z-TT-1186741958/0002/205960E8-6847-DC11-BF6E-00304885AAF2.root"
+       #'rfio:/castor/cern.ch/cms/store/RelVal/2007/8/12/RelVal-RelVal145W-E-1186929820/0002/38390E15-EF48-DC11-85FB-000423D9939C.root"
       }
-      untracked uint32 debugVerbosity = 0
-      untracked bool   debugFlag     = false
   }
 
   ## Paths and Modules
